Add .gitignore files for project dependencies and build artifacts

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,23 +1,26 @@
-# Dockerfile (수정된 버전)
+# Dockerfile (DB 모듈 추가 버전)
 # 베이스 이미지로 PHP 8.2-FPM Alpine 버전을 사용합니다.
 FROM php:8.2-fpm-alpine
 
-# Nginx, 그리고 PHP 확장 모듈 설치에 필요한 라이브러리들을 먼저 설치합니다.
+# Nginx 및 PHP 확장 모듈이 런타임에 필요로 하는 시스템 라이브러리들을 먼저 설치합니다.
 RUN apk update && apk add --no-cache \
     nginx \
-    # GD 라이브러리 의존성
+    freetype \
+    libjpeg-turbo \
+    libpng \
+    libzip \
+    zlib
+
+# GD, mysqli, pdo_mysql, zip PHP 확장 모듈을 설치합니다.
+# --virtual .build-deps 로 임시 그룹을 만들어 컴파일에 필요한 개발 도구와 -dev 패키지를 설치 후 깔끔하게 삭제합니다.
+RUN apk add --no-cache --virtual .build-deps $PHPIZE_DEPS \
     freetype-dev \
     libjpeg-turbo-dev \
     libpng-dev \
-    # ZIP 라이브러리 의존성
-    zlib-dev
-
-# GD, mysqli, zip PHP 확장 모듈을 설치합니다.
-# docker-php-ext-install 스크립트는 내부적으로 컴파일을 위해 build-base 같은 개발 도구를 필요로 합니다.
-# --virtual .build-deps 옵션으로 임시 그룹을 만들어 설치 후 깔끔하게 삭제할 수 있습니다.
-RUN apk add --no-cache --virtual .build-deps $PHPIZE_DEPS \
+    libzip-dev \
+    zlib-dev \
     && docker-php-ext-configure gd --with-freetype --with-jpeg \
-    && docker-php-ext-install -j$(nproc) gd mysqli zip \
+    && docker-php-ext-install -j$(nproc) gd mysqli pdo_mysql zip \
     && apk del .build-deps
 
 # Nginx 설정 파일 복사
