--- a/itu_migration/docker-compose.yml
+++ b/itu_migration/docker-compose.yml
@@ -7,11 +7,11 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: rhymix_app
+    container_name: itu_migration
     ports:
       - "8000:80" # PC의 8000번 포트를 컨테이너의 80번 포트에 연결
     volumes:
-      - /home/jtjoo/web/itunion.or.kr/rhymix:/var/www/html # PC의 rhymix 폴더를 컨테이너의 웹 루트와 동기화
+      - /home/jtjoo/web/itunion.or.kr/itu_migration/home4/fade3blk/http:/var/www/html # PC의 rhymix 폴더를 컨테이너의 웹 루트와 동기화
     depends_on:
       - db
     restart: always
@@ -19,9 +19,9 @@ services:
   # MariaDB 데이터베이스 서비스
   db:
     image: mariadb:10.6
-    container_name: rhymix_db
+    container_name: itu_migration_db
     environment:
-      MYSQL_DATABASE: rhymix_db
+      MYSQL_DATABASE: itu_migration_db
       MYSQL_USER: itunion
       MYSQL_PASSWORD: 7EN3eeZEvMj1Eq # 매우 강력한 비밀번호로 변경하세요
       MYSQL_ROOT_PASSWORD: JKyjggwOCdpRJjYB # 매우 강력한 루트 비밀번호로 변경하세요
