--- a/itu_migration/docker-compose.yml
+++ b/itu_migration/docker-compose.yml
@@ -53,12 +53,9 @@ services:
     ports:
       - "8081:80"
     environment:
+      # We can go back to this simpler method because of the healthcheck
       PMA_HOST: db
-      # These PHP settings override the defaults inside the container
-      PHP_UPLOAD_MAX_FILESIZE: 2G
-      PHP_POST_MAX_SIZE: 2G
-      PHP_MEMORY_LIMIT: 4G
-      PHP_MAX_EXECUTION_TIME: 3600
+      UPLOAD_LIMIT: 2048M
     networks:
       - itunion_net
     # This also waits for the db to be healthy
