--- a/itu_migration/nginx.conf
+++ b/itu_migration/nginx.conf
@@ -1,3 +1,4 @@
+# nginx.conf
 user www-data;
 worker_processes auto;
 error_log /var/log/nginx/error.log warn;
@@ -19,12 +20,10 @@ http {
         root /var/www/html;
         index index.php index.html;
 
-        # Rule for XE/Rhymix pretty URLs
         location / {
             try_files $uri $uri/ /index.php?$args;
         }
 
-        # Pass PHP scripts to PHP-FPM
         location ~ \.php$ {
             try_files $uri =404;
             fastcgi_split_path_info ^(.+\.php)(/.+)$;
@@ -35,8 +34,8 @@ http {
             fastcgi_param PATH_INFO $fastcgi_path_info;
         }
 
-        # Deny access to .php files in the files directory
-        location ~ ^/files/.*\.(php|phtml)$ {
+        # 보안을 위해 files 디렉토리 내의 php 파일 실행 방지
+        location ~ ^/files/.*\.(php|php3|php4|php5|phtml)$ {
             deny all;
         }
     }
