--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -38,5 +38,7 @@ http {
         location ~ ^/files/.*\.(php|php3|php4|php5|phtml)$ {
             deny all;
         }
+
+        include /etc/nginx/conf.d/xe.conf;
     }
 }
